fix overflow in bere buttons and update mvc core demos for media player

--- a/styles/web/common/base.less
+++ b/styles/web/common/base.less
@@ -228,7 +228,7 @@ html body .k-button-bare
 	}
 
 	.k-font-icon {
-		overflow: visible;
+		overflow: hidden;
 	}
 }
 
